@@ -15,6 +15,7 @@
 #endif
 #include <gtk/gtk.h>
 
+void gtk_open_external_file(const char *fpath);
 char *gtk_file_req_bridge(const char *title, const char *fpath, const char *pattn, int is_writemode);
 int gtk_simplereqbox_req_bridge(char *title, char *default_text, char *oktext, char *canceltext, int is_alert);
 int entrybox_req_bridge(char *title, int width, char *dflt_text, char *comment, int maxch, char **out_text_entry);
